# OpenCV-and-OpenGL

./: CMakeLists.txt  README.md  main.cpp
